Fix alignment of see more button

--- a/src/client/styles/components/SubjectHeadings.scss
+++ b/src/client/styles/components/SubjectHeadings.scss
@@ -6,6 +6,7 @@
 
 .subjectHeadingRow.openSubjectHeading {
   background: #E8E4E3;
+  border: 1px solid white;
 }
 
 .subjectHeadingRow > li {
